Setup and amplimentation project video feature using the agular youtube module.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <div class="text-center">
         <div class="dark_link p-1" routerLink="/home" routerLinkActive="selected-Link">
           <div class="rounded-circle bg-dark ">
-            <img class="rounded-circle py-2" src="https://source.unsplash.com/weekly?water" alt="Donald" width="90%" height="auto">
+            <img class="rounded-circle py-2" src="https://source.unsplash.com/weekly?sky" alt="Donald" width="90%" height="auto">
           </div>
           <h5 class="name_on_image">Donald Teghen</h5>
         </div>
@@ -53,7 +53,7 @@
       <span style="font-size: 30px;" routerLink="/contact" routerLinkActive="selected-Link"><i class="fas fa-address-card"></i></span>
       <span style="font-size: 30px;" routerLink="/blog" routerLinkActive="selected-Link"><i class="fas fa-blog"></i></span>
     </div> -->
-    <div class="col-sm-10 bg-dark py-2">
+    <div class="col-sm-10 py-2">
       <div class="text-center aligner py-2">
         <span style="font-size: 30px;" routerLink="/about" routerLinkActive="selected-Link"><i class="fas fa-user"></i></span>
         <span style="font-size: 30px;" routerLink="/resume" routerLinkActive="selected-Link"><i class="fas fa-file"></i></span>
