--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,58 +1,63 @@
 <div class="main">
-    <div class="my-4 py-4"><h2 >About <span style="color: rgb(130, 88, 228)">Me</span> </h2></div>
-    <div class="row border-bottom">
+    <div class="row">
         <div class="col-sm-6">
-            <p>I'm Donald and <span style="color: rgb(130, 88, 228)">I love web Development</span></p>
-            <div>
-                <p class="p-4">I am a highly competent web application software developer with 3 years’ experience developing a wide range of projects for both framework and non-framework oriented. I have proven expertise in building e-commerce and restaurant review apps. I understand the app project lifecycle in-depth and I enjoy all aspects of development from project planning to requirements gathering through to writing and testing code, creating documentation, and support. I am currently seeking long-term contract positions that will allow me to further improve and sharpen my software skills. I'm always up for new challenges and opportunities to learn more and do more.</p></div>
-            <div>
-                <p class="p-4"><span>Short Background</span></p>
-                <p>After graduating as an Electrical & Electronics engineer, I decided to pursue a career in web development and since then I've never looked back. I enjoy every step of the learning and development process. I have been developing for 3 years now, back and front between a few languages and frameworks, and then I finally settled down for Angular. Since then, I have managed to acquire some experience and developed a few projects. Actively learning and developing more projects.</p>
-            </div>
+            <div class="my-4 py-4"><h2 >About <span style="color: rgb(130, 88, 228)">Me</span> </h2></div>
         </div>
         <div class="col-sm-6">
-            <p><span style="color: rgb(130, 88, 228);">Date of Birth : </span>13.03.1992</p> 
-            <p><span style="color: rgb(130, 88, 228);">Age : </span>29</p>
-            <p><span style="color: rgb(130, 88, 228);">Address : </span>Ataşehir, Istanbul, Turkey</p>
-            <p><span style="color: rgb(130, 88, 228);">Email : </span>donaldteghen@mail.com</p>
-            <p><span style="color: rgb(130, 88, 228);">Phone : </span>+90 536 480 2141</p>
-            <p><span style="color: rgb(130, 88, 228);">Website : </span>https://donteghen.github.io/Portfolio/</p>
+            <img class ="about_me_img" src="assets/cs.jpg">
         </div>
     </div>
-    <div class="my-4 py-4"><h3 >What I do</h3></div>
     <div class="row border-bottom">
-        <div class="col-sm-6 my-4">
+        <div class="col-sm-6">
+            <p>I'm Donald and <span style="color: rgb(130, 88, 228)">I'm a Fullstack Developer</span></p>
+            <div>
+                <p class="p-2">I am a highly competent web application software developer with 3 years’ experience developing a wide range of projects for both framework and non-framework oriented. I have proven expertise in building e-commerce and restaurant review apps. I understand the app project lifecycle in-depth and I enjoy all aspects of development from project planning to requirements gathering through to writing and testing code, creating documentation, and support. I am currently seeking long-term contract positions that will allow me to further improve and sharpen my software skills. I'm always up for new challenges and opportunities to learn more and do more.</p>
+            </div>
+            <!-- <div>
+                <p class="p-4"><span>Short Background</span></p>
+                <p>After graduating as an Electrical & Electronics engineer, I decided to pursue a career in web development and since then I've never looked back. I enjoy every step of the learning and development process. I have been developing for 3 years now, back and front between a few languages and frameworks, and then I finally settled down for Angular. Since then, I have managed to acquire some experience and developed a few projects. Actively learning and developing more projects.</p>
+            </div> -->
+        </div>
+        <div class="col-sm-6">
+            <p class="p-2"><span>Short Background</span></p>
+            <p>After graduating as an Electrical & Electronics engineer, I decided to pursue a career in web development and since then I've never looked back. I enjoy every step of the learning and development process. I have been developing for 3 years now, back and front between a few languages and frameworks, and then I finally settled down for Angular. Since then, I have managed to acquire some experience and developed a few projects. Actively learning and developing more projects.</p>
+            
+        </div>
+    </div>
+    <div class="my-4 py-2"><h3 >What I do</h3></div>
+    <div class="row border-bottom">
+        <div class="col-sm-6 my-2">
             <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fab fa-angular"></i></span>
             <div><h5 class="py-2">Angular</h5></div>
             <div>It's been quite a study journey with angular. I like the design pattern implement by the framework, adding to the fact that its developed and maintained by google and a very rich set of third party libraries was convincing enough.</div>
         </div>
-        <div class="col-sm-6 my-4">
+        <div class="col-sm-6 my-2">
             <span style="font-size: 50px; color: rgb(130, 88, 228);" ><i class="fab fa-node"></i></span>
-            <div><h5 class="py-2">Node</h5></div>
+            <div><h5 class="py-1">Node</h5></div>
             <div>Along the way, i got tired of faking and mocking data, added to the fact that mock data is limited in flexibility, I decided to dive into nodejs. Ever since I have designed and built all my restful APIs with Node/express & Mongodb for the database, which I then fetch on client angular apps as needed...</div>
         </div>
-        <div class="col-sm-6 my-4">
+        <div class="col-sm-6 my-2">
             <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-record-vinyl"></i></span>
             <div><h5 class="py-2">Ionic</h5></div>
             <div>Mobile first design is undeniably a fantastic idea and I have use mobile-first libraries(PrimeNg and Bootstraps). However, the look and feel always seemed lacking(NON-NATIVE FEEL) in many ways. So I decided to get my hands dirty one more time and obviously, I went for ionics. Fantistic angular playmate and to ice the cake, its one source code, cross-platform deployment. Who can say to that? NOT ME...</div>
         </div>
         
     </div>
-    <div class="my-4 py-4"><h3>Interest</h3></div>
+    <div class="my-4 py-2"><h3>Interest</h3></div>
     <div class="row border-bottom">
-        <div class="col-sm-6 my-2 py-4 text-center border-right" >
+        <div class="col-sm-6 my-2 py-2 text-center border-right" >
             <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-laptop-code"></i></span>
             <div><h5>Programming</h5></div>
         </div>
-        <div class="col-sm-6 my-2 py-4 text-center" >
+        <div class="col-sm-6 my-2 py-2 text-center" >
             <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-book-reader"></i></span>
             <div><h5>Reading</h5></div>
         </div>
-        <div class="col-sm-6 my-2 py-4 text-center border-right" >
+        <div class="col-sm-6 my-2 py-2 text-center border-right" >
             <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-route"></i></span>
             <div><h5>Travel</h5></div>
         </div>
-        <div class="col-sm-6 my-2 py-4 text-center" >
+        <div class="col-sm-6 my-2 py-2 text-center" >
             <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-camera-retro"></i></span>
             <div><h5>Photography</h5></div>
         </div>
@@ -60,10 +65,10 @@
 
     <div class="my-4 py-4"><h3 >Certificates</h3></div>
     <div class="row border-bottom">
-        <div class="col-sm-6 my-4 text-center">
+        <div class="col-sm-6 my-2 text-center">
             <img src="assets/cs.jpg" width="100%" height="300px">
         </div>
-        <div class="col-sm-6 my-4 text-center">
+        <div class="col-sm-6 my-2 text-center">
             <img src="assets/js.jpg" width="100%" height="300px">
         </div>
         
