--- a/src/app/ui/about/about.component.css
+++ b/src/app/ui/about/about.component.css
@@ -4,8 +4,11 @@ h3{
     text-decoration-style: solid;
     text-decoration-thickness: 10px;
 }
-
-p, h2, h3, h4, h5, div{
+.about_me_img{
+  width: 100%;
+  height: 200px;
+}
+/* p, h2, h3, h4, h5, div{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 span {
@@ -16,4 +19,4 @@ span {
     0% { color: rgb(45, 35, 83); }
     50% { color: rgb(180, 13, 158); }
     100% { color: rgb(19, 226, 216); }
-  }
+  } */
