--- a/src/app/ui/works/works.component.css
+++ b/src/app/ui/works/works.component.css
@@ -13,6 +13,8 @@
   
   .more-text:hover .arrow{
     opacity: 1;
+    cursor: pointer;
+    text-decoration:none !important
   }
   .arrow{
     transition: .5s ease;
