--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-/*html {
-    background-image: url("https://source.unsplash.com/weekly?water");
-    background-color: #cccccc;
-    height: 500px;
+
+body{
+  font-family:cursive;
+  /* background-image: url(); */
+  background-color: #0c1414;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-  }
-*/
-body{
-  font-family:cursive;
-  
+    
 }
