Refactored some basic view styling.Took out the homepage and editted the content in the resume page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,9 +40,9 @@
           </div>
         </div>
         <div class="text-center py-2">
-          <a href="" target="_blank"><span class="mx-2 p-2" style="font-size: 30px;" ><i class="fab fa-facebook-square"></i></span></a>
-          <a href="" target="_blank"><span class="mx-2 p-2" style="font-size: 30px;" ><i class="fab fa-github-square"></i></span></a>
-          <a href="" target="_blank"><span class="mx-2 p-2" style="font-size: 30px;" ><i class="fab fa-linkedin"></i></span></a>
+          <a href="" target="_blank" (click)="goToPage(socialLink[0])"><span class="mx-2 p-2" style="font-size: 30px;" ><i class="fab fa-facebook-square"></i></span></a>
+          <a href="" target="_blank" (click)="goToPage(socialLink[1])"><span class="mx-2 p-2" style="font-size: 30px;" ><i class="fab fa-github-square"></i></span></a>
+          <a href="" target="_blank" (click)="goToPage(socialLink[2])"><span class="mx-2 p-2" style="font-size: 30px;" ><i class="fab fa-linkedin"></i></span></a>
         </div>
       </div>
     </div>
