--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -7,9 +7,9 @@
             <img class ="about_me_img" src="assets/cs.jpg">
         </div>
     </div>
-    <div class="row border-bottom">
+    <div class="row ">
         <div class="col-sm-6">
-            <p>I'm Donald and <span style="color: rgb(130, 88, 228)">I'm a Fullstack Developer</span></p>
+            <p>I'm <span style="color: rgb(130, 88, 228)">Donald</span> and I'm a<span style="color: rgb(130, 88, 228)"> Fullstack Developer</span></p>
             <div>
                 <p class="p-2">I am a highly competent web application software developer with 3 years’ experience developing a wide range of projects for both framework and non-framework oriented. I have proven expertise in building e-commerce and restaurant review apps. I understand the app project lifecycle in-depth and I enjoy all aspects of development from project planning to requirements gathering through to writing and testing code, creating documentation, and support. I am currently seeking long-term contract positions that will allow me to further improve and sharpen my software skills. I'm always up for new challenges and opportunities to learn more and do more.</p>
             </div>
@@ -24,12 +24,17 @@
             
         </div>
     </div>
-    <div class="my-4 py-2"><h3 >What I do</h3></div>
-    <div class="row border-bottom">
+    <div class="my-4 py-2 text-center"><h3 >What I do</h3></div>
+    <div class="row ">
         <div class="col-sm-6 my-2">
             <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fab fa-angular"></i></span>
             <div><h5 class="py-2">Angular</h5></div>
             <div>It's been quite a study journey with angular. I like the design pattern implement by the framework, adding to the fact that its developed and maintained by google and a very rich set of third party libraries was convincing enough.</div>
+        </div>
+        <div class="col-sm-6 my-2">
+            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fab fa-react"></i></span>
+            <div><h5 class="py-2">React</h5></div>
+            <div>Adding react to my development toolbox was yet another step towards polishing my frontend skills. I've come to appreciate and familiarize myself with JSX and react's unique way of handling application state data.With a very rich and quite diverse set of third party libraries make react development both challenging and exciting.</div>
         </div>
         <div class="col-sm-6 my-2">
             <span style="font-size: 50px; color: rgb(130, 88, 228);" ><i class="fab fa-node"></i></span>
@@ -43,9 +48,9 @@
         </div>
         
     </div>
-    <div class="my-4 py-2"><h3>Interest</h3></div>
-    <div class="row border-bottom">
-        <div class="col-sm-6 my-2 py-2 text-center border-right" >
+    <div class="my-4 py-2 text-center"><h3>Interest</h3></div>
+    <div class="row ">
+        <div class="col-sm-6 my-2 py-2 text-center " >
             <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-laptop-code"></i></span>
             <div><h5>Programming</h5></div>
         </div>
@@ -53,7 +58,7 @@
             <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-book-reader"></i></span>
             <div><h5>Reading</h5></div>
         </div>
-        <div class="col-sm-6 my-2 py-2 text-center border-right" >
+        <div class="col-sm-6 my-2 py-2 text-center " >
             <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-route"></i></span>
             <div><h5>Travel</h5></div>
         </div>
@@ -63,14 +68,28 @@
         </div>
     </div>
 
-    <div class="my-4 py-4"><h3 >Certificates</h3></div>
-    <div class="row border-bottom">
-        <div class="col-sm-6 my-2 text-center">
+    <div class="my-4 py-2 text-center"><h3 >Certificates</h3></div>
+    <div class="">
+        <!-- <div class="col-sm-6 my-2 text-center">
             <img src="assets/cs.jpg" width="100%" height="300px">
         </div>
         <div class="col-sm-6 my-2 text-center">
             <img src="assets/js.jpg" width="100%" height="300px">
+        </div> -->
+        <div class="my-2 py-2">
+            <span><i class="fas fa-arrow-circle-right"></i> Web Development with Angular and NodeJS</span> 
         </div>
-        
+        <div class="my-2 py-2">
+            <span><i class="fas fa-arrow-circle-right"></i> Full-Stack Web Development with React and NodeJS </span>
+        </div>
+        <div class="my-2 py-2">
+            <span><i class="fas fa-arrow-circle-right"></i> Back End Web Development(NodeJS + Databases) Certificate</span>
+        </div>
+        <div class="my-2 py-2">
+            <span><i class="fas fa-arrow-circle-right"></i> Front End Web Development Javascript Certificate</span>
+        </div>
+        <div class="my-2 py-2">
+            <span><i class="fas fa-arrow-circle-right"></i> C# and .NetFramework Certificate</span>
+        </div>
     </div>
 </div>
