--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -1,124 +1,133 @@
 <div class="main">
     <div class="my-4 py-4"><h2 >Working <span class="animate">Progress</span></h2></div>
-    <div class="row my-4">
-        <div class="col-sm-3 ">
-           <h4>2016 - Current</h4>
+    <div class="row my-2 py-2">
+        <div class="col-sm-4 ">
+           <h4>2019 - Current</h4>
+           <p>Madformath, Toros, Mersin</p>
+           <p>Frontend Developer</p>
         </div>
-        <div class="col-sm-3">
-            <h5>Freelancer</h5>
+        <div class="col-sm-8">
+            <h4>Achievements & Responsibilities</h4>
+            <p><span><i class="fas fa-arrow-circle-right"></i> Took part in the full-stack web development which involved design, development and testing.</span></p>
+            <p><span><i class="fas fa-arrow-circle-right"></i> Managed time-sensitive updates, including content changes and database upgrades.</span></p>
+            <p><span><i class="fas fa-arrow-circle-right"></i> Planned, wrote, and debugged web applications.</span></p>
         </div>
-        <div class="col-sm-6">
-            Since 2016, I've been developing my software knowledge and skill alongside my studies. My passion for software has grown over years and I researched and worked with many languages before finally, settling down with javascript & Typescript.
+        
+    </div>
+    <div></div>
+    <div class="row my-2 py-2">
+        <div class="col-sm-4 ">
+           <h4>2017 - 2019</h4>
+           <p>Final International University, Cyprus</p>
+           <p>Digital & Electronics Lab Assistant</p>
+        </div>
+        <div class="col-sm-8">
+            <h4>Objectives & Responsibilities</h4>
+            <p><span><i class="fas fa-arrow-circle-right"></i> With over 2 years as Lab coordination's assistant, I have acquired the team work and management skills sortout by the software and related industries.</span></p>
         </div>
     </div>
-    <div><hr></div>
-    <div class="row my-4">
-        <div class="col-sm-3">
-           <h4>2018 - 2020</h4>
-        </div>
-        <div class="col-sm-3">
-            <h5>Digital & Electronics Lab Assistant</h5>
-        </div>
-        <div class="col-sm-6">
-            With over 2 years as Lab coordination's assistant, I have acquired the team work and management skills sortout by the software and related industries.
-        </div>
-    </div>
-    <div><hr></div>
-    <div class="row my-4">
-        <div class="col-sm-3 ">
-           <h4>2012</h4>
-        </div>
-        <div class="col-sm-3">
-            <h5>Electrical & Electronics Design Internship</h5>
-        </div>
-        <div class="col-sm-6">
-             Six months at Cameroon's biggest power plant, with the best engineers in the country, I learnt under the supervision of the best. Some of the skils I developed include; Engineering patterns, team work and task management.
-        </div>
+    <div></div>
+    <div class="row my-2 py-2">
+        <div class="col-sm-4 ">
+            <h4>2012 - 2013</h4>
+            <p>Eneo, Cameroon</p>
+            <p>Electrical & Electronics Internship</p>
+         </div>
+         <div class="col-sm-8">
+             <h4>Internship Goal & Achievement</h4>
+             <p><span><i class="fas fa-arrow-circle-right"></i> Six months at Cameroon's biggest power plant, with the best engineers in the country, I learnt under the supervision of the best. Some of the skils I developed include; Engineering patterns, team work and task management.</span></p>
+         </div>
     </div>
 
-    <div class="mt-6">
+    <div class="mt-2">
         <button class="btn btn-outline-primary m-2"><a class="whitener" href="assets/DonaldTeghen_N.pdf" download="DonaldTeghen_N.pdf">Download Normal CV</a></button>
         <button class="btn btn-outline-primary m-2"><a class="whitener" href="assets/DonalTeghen_F.pdf" download="DonalTeghen_F.pdf">Download Fancy CV</a></button>
     </div>
 
     <div class="row my-4">
         <div class="col-sm-6">
-           <h3 class="py-4">Programming Skills</h3>
-           <div class="my-4 py-4">
+           <h3 class="py-2">Programming Skills</h3>
+           <div class="my-4 py-2">
                <h5>Typescript</h5>
                 <div class="progress">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
-            <div class="my-4 py-4">
+            <div class="my-4 py-2">
                 <h5>Javascript</h5>
                  <div class="progress">
-                     <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                     <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                  </div>
              </div>
-             <div class="my-4 py-4">
-                <h5>Java</h5>
-                 <div class="progress">
-                     <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
-                 </div>
-             </div>
-             <div class="my-4 py-4">
-                <h5>Html</h5>
-                 <div class="progress">
-                     <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
-                 </div>
-             </div>
-             <div class="my-4 py-4">
-                <h5>CSS</h5>
-                 <div class="progress">
-                     <div class="progress-bar bg-primary" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
-                 </div>
-             </div>
-             <div class="my-4 py-4">
+             <div class="my-4 py-2">
                 <h5>C#</h5>
                  <div class="progress">
-                     <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                     <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                  </div>
              </div>
-        </div>
-        <div class="col-sm-6">
-            <h3 class="py-4">FrameWorks Knowledge</h3>
-            <div class="my-4 py-4">
-                <h5>Angular</h5>
+             <div class="my-4 py-2">
+                <h5>Java</h5>
                  <div class="progress">
-                     <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                     <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                  </div>
              </div>
-             <div class="my-4 py-4">
-                <h5>Node</h5>
+             <div class="my-4 py-2">
+                <h5>Html</h5>
                  <div class="progress">
-                     <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                     <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                 </div>
+             </div>
+             <div class="my-4 py-2">
+                <h5>CSS</h5>
+                 <div class="progress">
+                     <div class="progress-bar bg-primary" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                  </div>
              </div>
              
+        </div>
+        <div class="col-sm-6">
+            <h3 class="py-2">FrameWorks Knowledge</h3>
+            <div class="my-4 py-2">
+                <h5>Angular</h5>
+                 <div class="progress">
+                     <div class="progress-bar bg-success" role="progressbar" style="width: 80%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                 </div>
+             </div>
+             <div class="my-4 py-2">
+                <h5>Node</h5>
+                 <div class="progress">
+                     <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                 </div>
+             </div>
+             <div class="my-4 py-2">
+                <h5>React</h5>
+                 <div class="progress">
+                     <div class="progress-bar bg-success" role="progressbar" style="width: 80%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                 </div>
+             </div>
                 
-             <div class="my-4 py-4">
+             <div class="my-4 py-2">
                 <h5>SCSS</h5>
                  <div class="progress">
-                     <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                     <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                  </div>
              </div>
-             <div class="my-4 py-4">
+             <div class="my-4 py-2">
                 <h5>Ionics</h5>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
              </div>
-             <div class="my-4 py-4">
+             <div class="my-4 py-2">
                 <h5>.NET FrameWork</h5>
                  <div class="progress">
-                     <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                     <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                  </div>
              </div>
-             <div class="my-4 py-4">
+             <div class="my-4 py-2">
                 <h5>ASP.NET FrameWork</h5>
                  <div class="progress">
-                     <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                     <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                  </div>
              </div>
         </div>
@@ -128,52 +137,57 @@
     <div class="row my-4">
         
         <div class="col-sm-6">
-            <h3 class="py-4">DataBase Knowledge</h3>
-            <div class="my-4 py-4">
+            <h3 class="py-2">DataBase Knowledge</h3>
+            <div class="my-4 py-2">
                 <h5>MS SQL</h5>
                  <div class="progress " style="height: 10px;">
-                     <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                     <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                  </div>
              </div>
-             <div class="my-4 py-4">
+             <div class="my-4 py-2">
                 <h5>MongoDB</h5>
                  <div class="progress" style="height: 10px;">
-                     <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                     <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                  </div>
              </div>
-             
+             <div class="my-4 py-2">
+                <h5>PostgreDB</h5>
+                 <div class="progress " style="height: 10px;">
+                     <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                 </div>
+             </div>
                 
-             <div class="my-4 py-4">
+             <div class="my-4 py-2">
                 <h5>Firebase</h5>
                  <div class="progress" style="height: 10px;">
-                     <div class="progress-bar bg-primary" role="progressbar" style="width: 75%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">75%</div>
+                     <div class="progress-bar bg-primary" role="progressbar" style="width: 75%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                  </div>
              </div>
-             <div class="my-4 py-4">
+             <div class="my-4 py-2">
                 <h5>Mysql</h5>
                  <div class="progress" style="height: 10px;">
-                     <div class="progress-bar bg-success" role="progressbar" style="width: 80%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">80%</div>
+                     <div class="progress-bar bg-success" role="progressbar" style="width: 80%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                  </div>
              </div>
         </div>
         <div class="col-sm-6">
-            <h3 class="py-4">Language Skills</h3>
-            <div class="my-4 py-4">
+            <h3 class="py-2">Language Skills</h3>
+            <div class="my-4 py-2">
                 <h5>English</h5>
                  <div class="progress" style="height: 10px;">
-                     <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                     <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                  </div>
              </div>
-             <div class="my-4 py-4">
+             <div class="my-4 py-2">
                  <h5>French</h5>
                   <div class="progress" style="height: 10px;">
-                      <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                      <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
               </div>
-              <div class="my-4 py-4">
+              <div class="my-4 py-2">
                  <h5>Turkish</h5>
                   <div class="progress" style="height: 10px;">
-                      <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                      <div class="progress-bar bg-warning" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
               </div>
          </div>
